# llm-mistral

./: .gitignore  README.md  llm_mistral.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_mistral.py
